feat: add custom stickers, chatbot and related infra (#722)
